# python-webpack-boilerplate

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml  pytest.ini  requirements-dev.txt  setup.cfg  setup.py
.github/: FUNDING.yml
.github/workflows/: ci.yml  python-publish.yml
docs/: deployment.md  esbuild.md  frontend.md  index.md  linting.md  live_reload.md  npm_command.md  react.md  run_npm_command_at_root.md  setup_with_bootstrap.md  setup_with_django.md  setup_with_flask.md  setup_with_tailwind.md  setup_with_tailwind3.md  swc.md  typescript.md  vue.md
examples/django_basic/: README.md  frontend
examples/django_basic/example/: settings.py  urls.py
examples/flask_basic/: README.md  app.py  frontend
examples/flask_basic/templates/: index.html
frontend_template/: cookiecutter.json
frontend_template/{{cookiecutter.project_slug}}/: package-lock.json  package.json
frontend_template/{{cookiecutter.project_slug}}/webpack/: webpack.config.dev.js  webpack.config.prod.js  webpack.config.watch.js
material/overrides/: main.html
tests/: config.py  conftest.py
tests/requirements/: django.txt  flask.txt
tests/tests_django/: dj_settings.py
tests/tests_flask/: conftest.py
webpack_boilerplate/: __init__.py  apps.py  config.py  exceptions.py  loader.py  utils.py
webpack_boilerplate/contrib/: jinja2ext.py
webpack_boilerplate/frontend_template/: cookiecutter.json
webpack_boilerplate/templatetags/: webpack_loader.py
webpack_loader/: __init__.py  apps.py
(+30 files in other folders)
